all functionality added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="content">
-      <button class="add-todo"> ADD TODO </button>
+    <div class="content"> 
       <div class="title">todos</div>
       <div class="form">
         <form>
@@ -36,21 +35,21 @@
             </div>
 
             <div class="footer__filters">
-              <div class="footer__filter">
+              <div class="footer__filter filter-all">
                 <a href="#/" class="selected">All</a>
               </div>
 
-              <div class="footer__filter">
+              <div class="footer__filter filter-active">
                 <a href="#/active">Active</a>
               </div>
 
-              <div class="footer__filter">
+              <div class="footer__filter filter-completed">
                 <a href="#/completed">Completed</a>
               </div>
             </div>
 
             <div class="footer__clear">
-              <button class="footer__button">Clear completed</button>
+              <button class="footer__button hide">Clear completed</button>
             </div>
             
             
