--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
             </div>
 
             <div class="footer__filters">
-              <div class="footer__filter filter-all">
+              <div class="footer__filter">
                 <a href="#/" class="selected">All</a>
               </div>
 
-              <div class="footer__filter filter-active">
+              <div class="footer__filter">
                 <a href="#/active">Active</a>
               </div>
 
-              <div class="footer__filter filter-completed">
+              <div class="footer__filter">
                 <a href="#/completed">Completed</a>
               </div>
             </div>
